<resources>
    <string name="app_name">Workplace Assistant</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_pass">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="failed_verification">Failed to send verification email.</string>
    <string name="success_verification">Verification email sent to</string>
    <string name="verify_email">Please verify your email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_email_sent">Reset password email sent</string>
    <string name="reset_password_email_failed">Reset password email failed</string>
    <string name="company_name">Company Name</string>
    <string name="settings">Settings</string>
    <string name="company_sign_up">Company Sign Up</string>
    <string name="chat_room">Enter Chat</string>
    <string name="sign_out">Sign Out</string>
    <string name="display_name">Display Name</string>
    <string name="old_password">Old Password</string>
    <string name="update">Update</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <string name="new_display_name">New Display Name</string>
    <string name="check">✓</string>
    <string name="display_name_update_success">Display Name Update Successful</string>
    <string name="display_name_update_fail">Display Name Update Failed</string>
    <string name="email_update_success">Email Update Successful</string>
    <string name="email_update_fail">Email Update Failed</string>
    <string name="password_update_success">Password Update Successful</string>
    <string name="password_update_fail">Password Update Failed</string>
    <string name="company_created_successfully">Company Created Successfully</string>
    <string name="send_message"><![CDATA[>]]></string>
    <string name="select_company">Select Company</string>
    <string name="add_member">Add Member</string>
    <string name="select_comp_or_chat">Select Company or Chat</string>
    <string name="member_email">Member Email</string>
    <string name="user_added">User Added</string>
    <string name="user_does_not_exist">User does not exist or no internet access</string>
    <string name="companies">Companies</string>
    <string name="user_settings">User Settings</string>
    <string name="company_management">Company Management</string>
    <string name="create_company">Create Company</string>
    <string name="maps">Maps</string>
    <string name="calendar">Calendar</string>
    <string name="chat_rooms">Chat Rooms</string>
    <string name="no_company">Please join a company</string>
    <string name="company_not_created">Company Was Not Created</string>
    <string name="chat_room_created">Chat room created</string>
    <string name="chat_room_not_created">Chat room not created</string>
    <string name="delete_this">Delete this message?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_company">Delete Company</string>
    <string name="add_chat">Add Chat</string>
    <string name="chat_title">Chat Title</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="title_activity_maps">Map</string>
    <string name="x">X</string>
    <string name="confirm">Confirm</string>
    <string name="employee">Employee</string>
    <string name="employee_name">Employee Name</string>
    <string name="new_shift">New Shift</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="new_announcement">New Announcement</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="announcement_created">Announcement Created</string>
    <string name="announcement_not_created">Announcement Not Created</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="shifts">Shifts</string>
    <string name="_0_00am">dead_time</string>
    <string name="name">Name</string>
    <string name="company_loc">Company Location</string>
    <string name="trade_shift">Trade Shift</string>
    <string name="select_shift">Select Shift</string>
    <string name="logo">Logo</string>
</resources>
