<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uoit.csci4100u.workplace_app.CompanySignUpActivity">


    <LinearLayout
        android:id="@+id/logo_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <ImageView
            android:contentDescription="@string/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="50dp"
            android:src="@mipmap/app_logo"
            android:foregroundGravity="center"/>


    </LinearLayout>

    <EditText
        android:id="@+id/companyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:layout_below="@+id/logo_holder"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="text"
        android:gravity="center"/>

    <EditText
        android:id="@+id/companyLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/companyName"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:hint="@string/company_loc"
        android:inputType="text"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnCompanySignUp"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/companyLoc"
        android:onClick="handleCompanySignUp"
        android:text="@string/sign_up"/>


</RelativeLayout>
