<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uoit.csci4100u.workplace_app.LandingPageActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:onClick="handleSettings"
                android:text="@string/settings"/>

            <Button
                android:id="@+id/btnCompanySignUp"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:onClick="handleCompanySignUp"
                android:text="@string/company_sign_up"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:onClick="handleSignOut"
                android:text="@string/sign_out"/>

            <Button
                android:id="@+id/btnChat"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:onClick="handleChat"
                android:text="@string/chat_rooms"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
