<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uoit.csci4100u.workplace_app.SettingsActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/new_email"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/updateEmail"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:hint="@string/new_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:onClick="handleUpdateNewEmail"
                android:text="@string/check" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/new_display_name"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/updateDisplayName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:hint="@string/new_email"
                android:inputType="text" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:onClick="handleUpdateNewDisplayName"
                android:text="@string/check" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/new_password"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/updatePass"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:onClick="handleUpdateNewPassword"
                android:text="@string/check" />
        </LinearLayout>

        <Button
            android:id="@+id/button7"
            android:layout_width="150dp"
            android:onClick="handleBack"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
